# thrift-cpp-demo

./: CMakeLists.txt  README.md  ThriftConfig.cmake  client.cpp  server.cpp
gen-cpp/: AIFilterMessage_constants.cpp  AIFilterMessage_constants.h  AIFilterMessage_types.cpp  AIFilterMessage_types.h  AIFilterService.cpp  AIFilterService.h  AIFilterService_server.skeleton.cpp  CMakeLists.txt
